<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="thank_you_for_coming_back_n_nfor_instructions_click_the_button_below">Thank You For Coming Back,\n\nFor Instructions Click The Button Below</string>
    <string name="to_instructions">To Instructions</string>
    <string name="instructions">Instructions</string>
    <string name="_1_add_items_by_clicking_on_the_nadd_floating_button_n_n2_when_adding_an_item_try_to_nenter_all_the_information_you_nknow_about_it_n_n3_add_the_information_correctly_n_n4_enjoy">1- Add Items By Clicking On The\nAdd Floating Button.\n\n2- When Adding An Item Try To\nEnter All The Information You\nKnow About It.\n\n3- Add The Information Correctly.\n\n4- Enjoy.</string>
    <string name="to_shoe_list">To Shoe List</string>
    <string name="details">Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="tap_to_go_to_listing">Tap To Go To Listing</string>
    <string name="the_list">The List</string>
    <string name="user_name">User Name</string>
    <string name="_1234">1234</string>
    <string name="shoe_list">Shoe List</string>
</resources>